feat/pebble-yaml-#3258: add Pebble YAML filter and function, fix tests